# url2brain

./: .env.sample  AGENTS.md  DESIGN.md  LICENSE  README.md  pyproject.toml
landing/: index.html  robots.txt  sitemap.xml  url2brain.html
landing/assets/: style.css
scripts/: deploy_landing.sh
src/url2brain/: api.py  articles.py  config.py  fetcher.py  llm.py  persona.py  poster.py  schemas.py
systemd/: url2brain-api.service
