[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "url2brain"
version = "0.1.0"
description = "URL2AI Publisher's brain: URL analysis + announcement/blog article generation with selectable LLM transport"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.8,<3",
  "requests>=2.31,<3",
  "uvicorn[standard]>=0.30,<1",
  "Markdown>=3.6,<4",
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1", "pytest>=8,<9", "ruff>=0.9,<1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"
